--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailor.</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -27,6 +32,7 @@
     <section class="hero">
         <div class="hero-section">
             <div class="hero-left">
+                <img src="./images/pic19.png" alt="">
                 <h1>We make cloths that suit you</h1>
                 <p>At Tailor., we craft custom clothing that fits your unique style and silhouette. From tailored suits
                     to elegant dresses, our skilled artisans pay attention to every detail to ensure you feel confident
@@ -38,11 +44,187 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="./images/pic1.png" alt="">
+                <img src="./images/pic20.png" alt="">
             </div>
         </div>
     </section>
+    <section class="clients-area">
+        <div class="clients-layer">
+            <div class="sewing">
+                <div>
+                    <img src="./images/pic5.png" alt="">
+                </div>
+                <div class="sewing-text">
+                    <h2>Tailor Sewing</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique.</p>
+                </div>
+            </div>
+            <div class="mesurement">
+                <div>
+                    <img src="./images/pic6.png" alt="">
+                </div>
+                <div class="mesurement-text">
+                    <h2>Mesurement</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique.</p>
+                </div>
+            </div>
+            <div class="ready-made">
+                <div>
+                    <img src="./images/pic7.png" alt="">
+                </div>
+                <div class="ready-made-text">
+                    <h2>Ready-made</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique.</p>
+                </div>
+            </div>
 
+        </div>
+    </section>
+    <section class="about">
+        <div class="aboutleft">
+            <!-- aboutleft -->
+            <img src="./images/pic18.png" alt="">
+        </div>
+        <div class="aboutright">
+            <!-- aboutright -->
+            <div class="aboutright-text">
+                <h2>About our
+                    tailor house</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                    tristique. Duis cursus, mi quis viverra ornare.</p>
+                <button>more about us</button>
+            </div>
+        </div>
+    </section>
+    <section class="service">
+        <div class="toptext">
+            <h2>Why use our service?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+        </div>
+    </section>
+    <section class="specials">
+        <div class="specials-layer">
+            <div class="specials-points">
+                <img src="./images/pic10.png" alt="">
+                <h2>Tailor Sewing</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+            <div class="specials-points">
+                <img src="./images/pic11.png" alt="">
+                <h2>Tailor Sewing</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+            <div class="specials-points">
+                <img src="./images/pic12.png" alt="">
+                <h2>Tailor Sewing</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+            <div class="specials-points">
+                <img src="./images/pic13.png" alt="">
+                <h2>Tailor Sewing</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+        </div>
+    </section>
+    <section class="show">
+        <div class="show-image">
+            <!-- <img src="./images/pic16.png" alt=""> -->
+        </div>
+    </section>
+    <section class="testimonials">
+        <div class="inner">
+            <h1>Testimonials</h1>
+            <div class="border"></div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="./images/pic23.png" alt="">
+                        <div class="name">John Doe</div>
+                        <div class="stars">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, </p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="./images/pic23.png" alt="">
+                        <div class="name">John Doe</div>
+                        <div class="stars">
+
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </div>
+
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, </p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonial">
+                        <img src="./images/pic23.png" alt="">
+                        <div class="name">John Doe</div>
+                        <div class="stars">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+
+                        </div>
+
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s, </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="socials">
+        <h2>Follow us on Instagram</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+        <div class="socials-images">
+            <img src="./images/pic24.png" alt="">
+            <img src="./images/pic25.png" alt="">
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer-map">
+            <img src="./images/pic26.png" alt="">
+        </div>
+        <div class="footer-contact">
+            <h2>Tailor.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+            <p><a href="#">(80) 783 367-3904</a></p>
+            <p><a href="#">(80) 783 367-4682</a></p>
+        </div>
+        <div class="footer-nav">
+            <h2>Our solutions</h2>
+            <p>Home</p>
+            <p>About</p>
+            <p>Services</p>
+            <p>Blog</p>
+            <p>Contact</p>
+        </div>
+    </section>
 </body>
 
 </html>
